projects/compiler/test/typechecker/accessor/error_unknown_field_chain_opt_unknown.out
Error at %FILE_NAME%:5:16
Unknown field 'xyz'
  |  val _ = f?.bar.xyz
                    ^
No field 'xyz' found on type Bar?
